# near-mappings

./: Cargo.toml  README.md  build.sh
res/: near_mappings.wasm
src/: lib.rs  validation.rs
