[package]
name = "near-mappings"
version = "0.1.0"
authors = ["Illia Polosukhin <ilblackdragon@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
near-sys = "0.2"
near-sdk = { version = "4.1.1", features = ["unstable"] }
hex = { version = "0.4.3", default-features = false }

[dev-dependencies]
near-crypto = "0.1.0"

[profile.release]
codegen-units = 1
opt-level = "s"
lto = true
debug = false
panic = "abort"
overflow-checks = true
